--- a/Client/app/src/main/res/values/strings.xml
+++ b/Client/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ACME Shop</string>
+    <string name="app_name"></string>
     <string name="tv_name">Name:</string>
     <string name="tv_address">Address:</string>
     <string name="tv_type">Type:</string>
