--- a/Client/app/src/main/res/values/strings.xml
+++ b/Client/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="title_activity_qr_code">QrCodeActivity</string>
+    <string name="tv_message_template">Value(%d b): \"%s\"</string>
 </resources>
