--- a/Client/app/src/main/res/values/strings.xml
+++ b/Client/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="title_activity_qr_code">QrCodeActivity</string>
     <string name="tv_message_template">Value(%d b): \"%s\"</string>
     <string name="check_profile">Check Profile Page</string>
+    <string name="ip_address">10.227.153.73</string>
 </resources>
